html et css conexion fini

--- a/inscription.html
+++ b/inscription.html
@@ -4,11 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="inscription.css">
-    <title>Connexion</title>
+    <title>inscription</title>
 </head>
 <body>
-    <h1>Bien venue sur Quizz O!</h1>
-    <p>Connexion</p>
+    <h1>Bien venue veuillez vous inscrire</h1>
+    <p>inscription</p>
     <div class="pseudo">
         <form action="inscription.php" method="post">
             <label for="prenom">Pseudo</label>
@@ -22,7 +22,6 @@
         </form>
     </div>
     <div class="button">
-            <input type="submit" value="Se connecter"><br></br>
             <input type="submit" value="S'inscrire">
         </form>
     </div>
