html et css acceuil fait

--- a/connexion.html
+++ b/connexion.html
@@ -7,7 +7,7 @@
     <title>Connexion</title>
 </head>
 <body>
-    <h1>Bien venue sur Quizz O!</h1>
+    <h1>Bienvenue sur Quizz O!</h1>
     <p>Connexion</p>
     <div class="pseudo">
         <form action="inscription.php" method="post">
@@ -22,9 +22,14 @@
         </form>
     </div>
     <div class="button">
-            <input type="submit" value="Se connecter"><br></br>
-            <input type="submit" value="S'inscrire">
+        <form action="accueil.html" method=""post>
+            <input type="submit" value="Se connecter"><br>
         </form>
     </div>
+    <p>Pas encore de compte ?</p>
+    <div class="button">
+        <form action="inscription.html" method=""post>
+            <input type="submit" value="S'inscrire">
+        </form>
 </body>
 </html>
