--- a/inscription.html
+++ b/inscription.html
@@ -4,10 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="inscription.css">
-    <title>inscription</title>
+    <title>Inscription</title>
 </head>
 <body>
-    <h1>Bien venue veuillez vous inscrire</h1>
+    <h1>Veuillez vous inscrire</h1>
     <p>inscription</p>
     <div class="pseudo">
         <form action="inscription.php" method="post">
@@ -22,6 +22,7 @@
         </form>
     </div>
     <div class="button">
+        <form action="accueil.html" method=""post>
             <input type="submit" value="S'inscrire">
         </form>
     </div>
