--- a/connexion.html
+++ b/connexion.html
@@ -26,7 +26,7 @@
             <input type="submit" value="Se connecter"><br>
         </form>
     </div>
-    <p>Pas encore de compte ?</p>
+    <p>Pas encore inscrie ?</p>
     <div class="button">
         <form action="inscription.html" method=""post>
             <input type="submit" value="S'inscrire">
