--- a/connexion.html
+++ b/connexion.html
@@ -9,22 +9,18 @@
 <body>
     <h1>Bienvenue sur Quizz O!</h1>
     <p>Connexion</p>
-    <form action="intermédiaire.php" method="post">
-    <div class="pseudo">
+    <form action="intermédiaire.html" method="post">
+        <div class="pseudo">
             <label for="prenom">Pseudo</label>
             <input type="text" name="prenom" id="prenom" required><br>
-    </form>
-    </div>
-    <div class="Mdp">
+        </div>
+        <div class="Mdp">
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
-        </form>
-    </div>
-    <div class="button">
-        <form action="accueil.html" method=""post>
+        </div>
+        <div class="button">
             <input type="submit" value="Se connecter"><br>
-        </form>
-    </div>
+        </div>
     </form>
     <p>Pas encore inscrie ?</p>
     <div class="button">
