--- a/connexion.html
+++ b/connexion.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Bienvenue sur Quizz O!</h1>
     <p>Connexion</p>
-    <form action="intermédiaire.html" method="post">
+    <form action="intermédiaire1.php" method="post">
         <div class="pseudo">
             <label for="prenom">Pseudo</label>
             <input type="text" name="prenom" id="prenom" required><br>
