--- a/connexion.html
+++ b/connexion.html
@@ -11,7 +11,7 @@
     <p>Connexion</p>
     <form action="intermédiaire1.php" method="post">
         <div class="pseudo">
-            <label for="prenom">Pseudo</label>
+            <label for="prenom">Pseudo/Mail</label>
             <input type="text" name="prenom" id="prenom" required><br>
         </div>
         <div class="Mdp">
