--- a/inscription.html
+++ b/inscription.html
@@ -9,18 +9,19 @@
 <body>
     <h1>Veuillez vous inscrire</h1>
     <p>inscription</p>
+    <form action="inscription.php" method="post">
+    <div class="mail">
+            <label for="mail">Mail</label>
+            <input type="text" name="nom" id="nom" required><br>
     <div class="pseudo">
-        <form action="inscription.php" method="post">
             <label for="prenom">Pseudo</label>
             <input type="text" name="prenom" id="prenom" required><br>
-    </form>
     </div>
     <div class="Mdp">
-        <form action="inscription.php" method="post">
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
-        </form>
     </div>
+    </form>
     <div class="button">
         <form action="accueil.html" method=""post>
             <input type="submit" value="S'inscrire">
