css arrangement et mail

--- a/inscription.html
+++ b/inscription.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,7 @@
     <div class="mail">
             <label for="mail">Mail</label>
             <input type="text" name="nom" id="nom" required><br>
+    </div>
     <div class="pseudo">
             <label for="prenom">Pseudo</label>
             <input type="text" name="prenom" id="prenom" required><br>
@@ -21,7 +22,7 @@
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
     </div>
-    </form>
+    </form><br>
     <div class="button">
         <form action="accueil.html" method=""post>
             <input type="submit" value="S'inscrire">
