--- a/connexion.html
+++ b/connexion.html
@@ -1,9 +1,9 @@
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="inscription.css">
+    <link rel="stylesheet" href="connexion.css">
     <title>Connexion</title>
 </head>
 <body>
@@ -11,19 +11,20 @@
     <p>Connexion</p>
     <form action="intermédiaire1.php" method="post">
         <div class="pseudo">
-            <label for="prenom">Pseudo/Mail</label>
+            <label for="prenom">Pseudo ou Mail</label>
             <input type="text" name="prenom" id="prenom" required><br>
         </div>
         <div class="Mdp">
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
         </div>
+        <br>
         <div class="button">
             <input type="submit" value="Se connecter"><br>
         </div>
     </form>
     <p>Pas encore inscrie ?</p>
-    <div class="button">
+    <div class="button1">
         <form action="inscription.html" method=""post>
             <input type="submit" value="S'inscrire">
         </form>
