--- a/inscription.html
+++ b/inscription.html
@@ -24,7 +24,10 @@
     </div>
     </form><br>
     <div class="button">
-        <input type="submit" value="S'inscrire"><br>
+        <input type="submit" value="S'inscrire">
+    </div>
+    <div class="button1">
+            <input type="submit" value="Se connecter">
     </div>
     </form>
 </body>
