--- a/inscription.html
+++ b/inscription.html
@@ -22,7 +22,15 @@
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
     </div>
-    </form><br>
+    </form>
+    <div class="select">
+    <select name="Type" id="Type-select" required>
+        <option value="" style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">--Choisie un rôle--</option>
+        <option value="User"style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">User</option>
+        <option value="Quizzer">Quizzer</option>
+    </select>
+    </div>
+    <br><br>
     <div class="button">
         <input type="submit" value="S'inscrire">
     </div>
