--- a/inscription.html
+++ b/inscription.html
@@ -12,7 +12,7 @@
     <form action="intermédiaire1.php" method="post">
     <div class="mail">
             <label for="mail">Mail</label>
-            <input type="text" name="nom" id="nom" required><br>
+            <input type="email" name="mail" id="mail" required=""><br>
     </div>
     <div class="pseudo">
             <label for="prenom">Pseudo</label>
@@ -22,13 +22,22 @@
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
     </div>
-    </form><br>
+    <div class="select">
+    <select name="Type" id="Type-select" required>
+        <option value="" style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">--Choisie un rôle--</option>
+        <option value="3"style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">User</option>
+        <option value="2">Quizzer</option>
+    </select>
+    </div>
+    <br><br>
     <div class="button">
         <input type="submit" value="S'inscrire">
     </div>
-    <div class="button1">
+    </form>
+    <form action="connexion.html" method="post">
+        <div class="button1">
             <input type="submit" value="Se connecter">
-    </div>
+        </div>
     </form>
 </body>
 </html>
