--- a/inscription.html
+++ b/inscription.html
@@ -21,8 +21,7 @@
     <div class="Mdp">
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
-    </div>
-    </form><br>
+    </div><br><br>
     <div class="button">
         <input type="submit" value="S'inscrire">
     </div>
