--- a/inscription.html
+++ b/inscription.html
@@ -21,8 +21,7 @@
     <div class="Mdp">
             <label for="password">Mot de passe</label>
             <input type="password" name="password" id="password" required><br>
-    </div>
-    </form><br>
+    </div><br>
     <div class="select">
         <select name="Type" id="Type-select" required>
             <option value="" style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">--Choisie un rôle--</option>
