--- a/accueil1.html
+++ b/accueil1.html
@@ -23,9 +23,11 @@
         <input type="submit" value="Mes Quizz">
     </div>
     </form>
-    <form>
+    <form action="gestion.php" method="post">
     <div class="button3">
-        <input type="submit" value="Gérer">
+        <input type="submit" value="Gérer" href="gestion.php">
+    </div>
     </form>
+    <script src="accueilAdmin.js"></script>
 </body>
 </html>
