--- a/inscription.html
+++ b/inscription.html
@@ -25,8 +25,8 @@
     <div class="select">
         <select name="Type" id="Type-select" required>
             <option value="" style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">--Choisie un rôle--</option>
-            <option value="User"style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">User</option>
-            <option value="Quizzer">Quizzer</option>
+            <option value=3 style="color:linear-gradient(to top,rgba(218, 73, 218, 0.877), pink);">User</option>
+            <option value=2 >Quizzer</option>
         </select>
     </div>
     <br><br>
