--- a/creation nom de quizz.html
+++ b/creation nom de quizz.html
@@ -13,11 +13,11 @@
         <input type="text" id="nom" name="nom"><br><br>
         <select id="difficulte" name="difficulte">
             <option value="">Choissisez une difficulté</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
+            <option value=1>1</option>
+            <option value=2>2</option>
+            <option value=3>3</option>
+            <option value=4>4</option>
+            <option value=5>5</option>
         </select>
         <div classe="Suivant">
           <button type="submit">Valider</button>
